Setup Geocode and Weather API

--- a/index.html
+++ b/index.html
@@ -34,6 +34,35 @@
                 </div>       
             </div>
         </div>
+        <script>
+            const apiKey = "6eb47195933e12a8ce60a8ea22b75f73";
+            const geoCodeUrl = "http://api.openweathermap.org/geo/1.0/direct?q=London";
 
+            async function checkWeather(){
+                const response = await fetch(geoCodeUrl + `&appid=${apiKey}`);
+                var geocodeData = await response.json();
+
+                //console.log(geocodeData);
+
+                let lat = geocodeData[0]['lat'];
+                let lon = geocodeData[0]['lon'];
+                let weatherUrl = "https://api.openweathermap.org/data/2.5/weather?units=imperial&lat=" + lat + `&lon=${lon}` + `&appid=${apiKey}`;
+                const weatherResponse = await fetch(weatherUrl);
+                var weatherData = await weatherResponse.json();
+
+                console.log(weatherData);
+
+                document.querySelector(".city").innerHTML = weatherData.name;
+                document.querySelector(".temp").innerHTML = Math.round(weatherData.main.temp) + '°F';
+                document.querySelector(".humidity").innerHTML = weatherData.main.humidity + '%';
+                document.querySelector(".wind").innerHTML = weatherData.wind.speed + ' mph';
+
+            }
+            
+            checkWeather();
+
+
+
+        </script>
     </body>
 </html>
